force-app/main/default/objects/Reference_HRE_CHB_Orders__c/Reference_HRE_CHB_Orders__c.object-meta.xml
<CustomObject>
    <description>on 1/17/15, FLurz changed object Label from  Reference HRE/CHB Order  to  Reference Handbooks Order, and the Plural Label from  Reference HRE/CHB Orders  to  Reference Handbooks Orders   -  NOT changing the Object Name. 
Also changed Record Name from  HRE/CHB Order Number  to  Handbooks Order Number.</description>
    <label>Reference Handbooks Order</label>
    <nameField>
        <displayFormat>Order - {00000000}</displayFormat>
        <label>Handbooks Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Handbooks Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>