force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Discard_Binders__c.field-meta.xml
<CustomField>
    <fullName>Discard_Binders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discard Binders</label>
    <type>Checkbox</type>
</CustomField>