force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Handbook_Version_Name__c.field-meta.xml
<CustomField>
    <fullName>Handbook_Version_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Complete this if there are multiple version of the handbook.</inlineHelpText>
    <label>Handbook Version Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>