force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Oasis_HRP_Name__c.field-meta.xml
<CustomField>
    <fullName>Oasis_HRP_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oasis HRP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>