force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Order_Final_Approval_Copy__c.field-meta.xml
<CustomField>
    <fullName>Order_Final_Approval_Copy__c</fullName>
    <formula>hyperlink(&quot;/apex/APXTConga4__Conga_Composer?ServerURL=&quot; +
$Api.Partner_Server_URL_370 + &quot;&amp;Id=&quot;+ Id &amp;&quot;&amp;RecordType=01270000000ULSn&amp;MFTS0=Sent_to_Print_Date__c&amp;MFTSValue0=&quot;&amp;text(TODAY())&amp;&quot;&amp;&amp;MFTS1=Final_Approval_Copy_to_HRG_Date__c&amp;MFTSValue1=&quot;&amp;text(TODAY())&amp;&quot;&amp;&amp;CETid=a1A70000003q46o&amp;TemplateGroup=Handbooks&amp;EmailAdditionalTo=&quot;&amp; Conga_Email_Helper_HRG_Email__c &amp;&quot; &amp;EmailRelatedToId=&quot;&amp; Id &amp;&quot;&amp;lg3=2&amp;LG4=1&amp;LG1=Final Approval Copy&amp;LGAttachOption=0&amp;ds7=0&quot;,IMAGE(&quot;/resource/HRECHEButtonFinal&quot;,&quot;HRECHEButtonFinal&quot;),&quot;_blank&quot;)</formula>
    <label>Final Electronic Copy</label>
    <type>Text</type>
</CustomField>