force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Other_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Other_Quantity__c</fullName>
    <label>Other Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>