force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Performance_Appraisal_Manual__c.field-meta.xml
<CustomField>
    <fullName>Performance_Appraisal_Manual__c</fullName>
    <label>Performance Appraisal Manual</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>