force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Prospect_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name__c</fullName>
    <formula>Reference_HR_Essentials__r.Account_Lookup__r.Name</formula>
    <label>Prospect-Client Name</label>
    <type>Text</type>
</CustomField>