force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Sent_to_Print__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Print</label>
    <type>Checkbox</type>
</CustomField>