force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Shipping_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Order_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Order ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>