force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Spanish_Paid__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spanish Paid</label>
    <type>Checkbox</type>
</CustomField>