force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Spanish_Transaction_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Transaction_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spanish Transaction Cancelled</label>
    <type>Checkbox</type>
</CustomField>