force-app/main/default/objects/Reference_HRE_CHB_Orders__c/fields/Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Due Date</label>
    <type>Date</type>
</CustomField>