force-app/main/default/objects/Reference_HRE_CHB_Orders__c/recordTypes/Handbook_HR_Solutions_Order_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Handbook_HR_Solutions_Order_Record_Type</fullName>
    <active>true</active>
    <description>Used to submit Handbook orders for HR Solutions clients</description>
    <label>Handbook HR Solutions Order Record Type</label>
</RecordType>