force-app/main/default/objects/Reference_HRE_CHB_Orders__c/recordTypes/Handbook_Onboarding_Order_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Handbook_Onboarding_Order_Record_Type</fullName>
    <active>true</active>
    <description>Used to process initial HRE Onboarding Handbooks</description>
    <label>Handbook Onboarding Order Record Type</label>
</RecordType>