force-app/main/default/objects/Reference_HRE_CHB_Orders__c/recordTypes/Handbook_PEO_Order_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Handbook_PEO_Order_Record_Type</fullName>
    <active>true</active>
    <description>Used to submit Handbook orders for PEO clients</description>
    <label>Handbook PEO Order Record Type</label>
</RecordType>