force-app/main/default/objects/Reference_HRE_CHB_Orders__c/recordTypes/Handbook_Supply_Order_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Handbook_Supply_Order_Record_Type</fullName>
    <active>false</active>
    <description>Used by Handbooks to submit supply orders for clients</description>
    <label>Handbook Supply Order Record Type</label>
</RecordType>