force-app/main/default/objects/Reference_HRE_CHB_Orders__c/recordTypes/Handbook_Support_Order_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Handbook_Support_Order_Record_Type</fullName>
    <active>true</active>
    <description>Used to process HRE Handbook Support Orders after Onboarding Order is complete</description>
    <label>Handbook Support Order Record Type</label>
</RecordType>