force-app/main/default/objects/Reference_HRE_CHB_Orders__c/recordTypes/HRE_Order_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>HRE_Order_Record_Type</fullName>
    <active>false</active>
    <label>HRE Order Record Type</label>
</RecordType>