force-app/main/default/objects/Reference_HRE_CHB_Orders__c/validationRules/HBK_CopyDiffCltVer_NoCopySameCltVer.validationRule-meta.xml
<ValidationRule>
    <fullName>HBK_CopyDiffCltVer_NoCopySameCltVer</fullName>
    <active>true</active>
    <description>Prevent the Copy Handbook Version of this Client field from being populated at the same time as either the Copy Handbook From Different Client or the Different Client Handbook Version Title fields.</description>
    <errorConditionFormula>NOT(ISBLANK(Copy_Handbook_Version_of_this_Client__c)) &amp;&amp; ( NOT(ISBLANK(Copy_Handbook_From_Different_Client__c)) || NOT(ISBLANK(Different_Client_Handbook_Version_Title__c)) )</errorConditionFormula>
    <errorDisplayField>Copy_Handbook_Version_of_this_Client__c</errorDisplayField>
    <errorMessage>You can&apos;t have both the Same Client and Different Client Version fields populated at the same time.</errorMessage>
</ValidationRule>