force-app/main/default/objects/Reference_HRE_CHB_Orders__c/validationRules/HBK_PreventCreateOfCompletedOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>HBK_PreventCreateOfCompletedOrder</fullName>
    <active>true</active>
    <description>If the related Reference Handbooks/HRServices record&apos;s Current Step = Complete, then prevent creation of a new Reference HRE/CHB Order record</description>
    <errorConditionFormula>AND(
ISNEW(),
TESTReferenceHandbooksHRServicesCurrStep__c = &quot;Completed&quot;, 
(NOT(BEGINS($Profile.Name,&quot;HR Essentials&quot;))), 
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))) 
)</errorConditionFormula>
    <errorMessage>You cannot create a Order record on a Completed Reference Handbooks/HR Services record</errorMessage>
</ValidationRule>