force-app/main/default/objects/Reference_HRE_CHB_Orders__c/validationRules/HRG_BinderQnty_MinimumNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>HRG_BinderQnty_MinimumNumber</fullName>
    <active>true</active>
    <description>Enforce the allowable number of binders of 5 or 10 or more binders - exclude quantities of 0, 1, 2, 3, 4, 6, 7, 8 or 9.  Null, 5 and &gt;= 10 are OK for Binder_Quantity__c.</description>
    <errorConditionFormula>AND( 
($RecordType.Name = &quot;Handbook HR Solutions Order Record Type&quot;) || ($RecordType.Name = &quot;Handbook PEO Order Record Type&quot;), 
( (Binder_Quantity__c &gt;= 0) &amp;&amp; (Binder_Quantity__c &lt;= 4) ) || ( (Binder_Quantity__c &gt;= 6) &amp;&amp; (Binder_Quantity__c &lt;= 9) ),
(Historical_Order_Indicator__c = 0), 
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))) 
)</errorConditionFormula>
    <errorDisplayField>Binder_Quantity__c</errorDisplayField>
    <errorMessage>If you select Binder Quantity, the acceptable values are 5 or 10 or more binders.</errorMessage>
</ValidationRule>