force-app/main/default/objects/Reference_HRE_CHB_Orders__c/validationRules/HRG_BinderValues_whenBinderQtySpanBndQty.validationRule-meta.xml
<ValidationRule>
    <fullName>HRG_BinderValues_whenBinderQtySpanBndQty</fullName>
    <active>true</active>
    <description>C40 - if either the Binder Quantity OR Spanish Binder quantity is Not Null, AND 8 1/2 x 11 = FALSE, then the Binder Color,  Binder Cover Option and  Binder Template  fields must NOT be blank</description>
    <errorConditionFormula>AND( 
($RecordType.Name = &quot;Handbook HR Solutions Order Record Type&quot;), 
( ( (NOT(ISNULL(Binder_Quantity__c))) || (NOT(ISNULL(Spanish_Binder_Quantity__c))) ) &amp;&amp; (NOT(X8_x_11__c)) ), 
( (ISPICKVAL(Outside_Color__c, &apos;&apos;)) || (ISPICKVAL(Art__c, &apos;&apos;)) || (ISPICKVAL(Template__c, &apos;&apos;)) ), 
(Historical_Order_Indicator__c = 0),
(NOT(BEGINS($Profile.Name,&quot;HR Essentials&quot;))), 
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))) 
)</errorConditionFormula>
    <errorDisplayField>Art__c</errorDisplayField>
    <errorMessage>The Binder Color, Binder Cover Option and Binder Template fields CAN NOT be blank when 8 ½ x 11 is unchecked, AND either the Binder Quantity OR Spanish Binder Quantity field is populated.</errorMessage>
</ValidationRule>