force-app/main/default/objects/Reference_HRE_CHB_Orders__c/validationRules/HRG_InsertsQnty_MinimumNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>HRG_InsertsQnty_MinimumNumber</fullName>
    <active>true</active>
    <description>C18 - if Inserts Quantity is populated, then the value cannot be 0 (zero).</description>
    <errorConditionFormula>AND(
( Inserts_Quantity__c = 0 ),
(Historical_Order_Indicator__c = 0), 
(NOT(BEGINS($Profile.Name,&quot;HR Essentials&quot;))),
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;)))
)</errorConditionFormula>
    <errorDisplayField>Inserts_Quantity__c</errorDisplayField>
    <errorMessage>You must NOT select a zero value for the Inserts Quantity field.</errorMessage>
</ValidationRule>