force-app/main/default/objects/Reference_HRE_CHB_Orders__c/validationRules/HRG_LogoBinder_when_BinderCoverLogo.validationRule-meta.xml
<ValidationRule>
    <fullName>HRG_LogoBinder_when_BinderCoverLogo</fullName>
    <active>true</active>
    <description>B13 - if  Binder Cover Option value = Logo, then the  Logo for the Binder  Field must NOT be Null</description>
    <errorConditionFormula>AND( 
($RecordType.Name = &quot;Handbook HR Solutions Order Record Type&quot; ), 
(ISPICKVAL(Art__c, &apos;Logo&apos;)), 
(ISPICKVAL(Logo_for_the_Binder__c, &apos;&apos;)), 
(Historical_Order_Indicator__c = 0),
(NOT(BEGINS($Profile.Name,&quot;HR Essentials&quot;))), 
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))) 
)</errorConditionFormula>
    <errorDisplayField>Logo_for_the_Binder__c</errorDisplayField>
    <errorMessage>You must select a Logo for the Binder value when selecting the Binder Cover Option value of &apos;Logo&apos;.</errorMessage>
</ValidationRule>