force-app/main/default/objects/Reference_HRE_CHB_Orders__c/validationRules/HRG_NoChanges_whenVoidDate.validationRule-meta.xml
<ValidationRule>
    <fullName>HRG_NoChanges_whenVoidDate</fullName>
    <active>true</active>
    <description>C31 - if Void Date = Not Null, then prevent the HRGS from updating all fields EXCEPT the Void Reason field.</description>
    <errorConditionFormula>AND( 
(NOT(ISNULL(Void_Date__c))), 
( (ISCHANGED(Copy_Handbook_From_Different_Client__c)) || 
 (ISCHANGED(Copy_Handbook_Version_of_this_Client__c)) || 
 (ISCHANGED(Different_Client_Handbook_Version_Title__c)) || 
 (ISCHANGED(Handbook_Successfully_Exported__c)) || 
 (ISCHANGED(Name_Of_Exported_Handbook__c)) || 
 (ISCHANGED(Username_The_File_Was_Exported_Under__c)) || 
 (ISCHANGED(X8_x_11__c)) || 
 (ISCHANGED(Consecutive_Page_Numbers__c)) || 
 (ISCHANGED(Handbooks_Process_Needed__c)) || 
 (ISCHANGED(Logo_For_The_Title_Page__c)) || 
 (ISCHANGED(Tab_Color__c)) || 
 (ISCHANGED(Type_of_Request__c)) || 
 (ISCHANGED(X8_x_11_Options__c)) || 
 (ISCHANGED(Outside_Color__c)) || 
 (ISCHANGED(Art__c)) || 
 (ISCHANGED(Template__c)) || 
 (ISCHANGED(Client_Name_to_be_Printed_on_Binder__c)) || 
 (ISCHANGED(Electronic_Only__c)) || 
 (ISCHANGED(HTML_Needed__c)) || 
 (ISCHANGED(Inserts_Quantity__c)) || 
 (ISCHANGED(Logo_for_the_Binder__c)) || 
 (ISCHANGED(Spanish_Binder_Quantity__c)) || 
 (ISCHANGED(Spanish_Inserts_Quantity__c)) ), 
(NOT(BEGINS($Profile.Name,&quot;HR Essentials&quot;))), 
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))) 
)</errorConditionFormula>
    <errorDisplayField>Void_Date__c</errorDisplayField>
    <errorMessage>You can NOT update any fields (EXCEPT for the Void Reason), if the Void Date field is populated.</errorMessage>
</ValidationRule>