force-app/main/default/objects/Reference_HRE_CHB_Orders__c/validationRules/HRG_NoCltNameBinder_when_BinderCoverLogo.validationRule-meta.xml
<ValidationRule>
    <fullName>HRG_NoCltNameBinder_when_BinderCoverLogo</fullName>
    <active>true</active>
    <description>C45 - if  Binder Cover Option value = Logo, then the  Client Name to be Printed on Binder  Field must be Null</description>
    <errorConditionFormula>AND( 
($RecordType.Name = &quot;Handbook HR Solutions Order Record Type&quot;), 
( ISPICKVAL(Art__c, &apos;Logo&apos;) ), 
( (NOT(ISBLANK(Client_Name_to_be_Printed_on_Binder__c))) ), 
(Historical_Order_Indicator__c = 0), 
(NOT(BEGINS($Profile.Name,&quot;HR Essentials&quot;))), 
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))) 
)</errorConditionFormula>
    <errorDisplayField>Client_Name_to_be_Printed_on_Binder__c</errorDisplayField>
    <errorMessage>You must not enter a Client Name to be Printed on Binder value when selecting the Binder Cover Option value of &apos;Logo&apos;.</errorMessage>
</ValidationRule>