force-app/main/default/objects/Reference_HRE_CHB_Orders__c/validationRules/HRG_NoLogoBinder_when_BinderCoverText.validationRule-meta.xml
<ValidationRule>
    <fullName>HRG_NoLogoBinder_when_BinderCoverText</fullName>
    <active>true</active>
    <description>C46 - if  Binder Cover Option value = Text, then the  Logo for the Binder  field must be Null</description>
    <errorConditionFormula>AND( 
($RecordType.Name = &quot;Handbook HR Solutions Order Record Type&quot;), 
( ISPICKVAL(Art__c, &apos;Text&apos;) ), 
(NOT(ISPICKVAL(Logo_for_the_Binder__c, &apos;&apos;))), 
(NOT(BEGINS($Profile.Name,&quot;HR Essentials&quot;))), 
(NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))) 
)</errorConditionFormula>
    <errorDisplayField>Logo_for_the_Binder__c</errorDisplayField>
    <errorMessage>You must not enter a Logo for the Binder value when selecting the Binder Cover Option value of &apos;Text&apos;.</errorMessage>
</ValidationRule>